# nbody

./: .gitignore  LICENSE  README.md
cpp/: README.md
numba/: 1.py  README.md
numpy/: 1.py
python/: 2.py  README.md
rust/: README.md
rust-binding/: Cargo.toml  README.md  pyproject.toml
rust-binding/python/: binding.py
rust-binding/src/: lib.rs
